# src/controllers/sources.controller.ts
@@ -1,5 +1,5 @@
 import { FastifyReply, FastifyRequest } from "fastify";
-import { asyncHandler } from "../core";
+import { asyncHandler, SourceInput } from "../core";
 import { Sources } from "../services";
 
 export const listSources = asyncHandler(
@@ -25,6 +25,17 @@ export const getSource = asyncHandler(
     const { sourceId } = request.params;
 
     const source = await Sources.get(sourceId);
+
+    return reply.status(200).send(source);
+  }
+);
+
+export const createSource = asyncHandler(
+  async (
+    request: FastifyRequest<{ Body: SourceInput }>,
+    reply: FastifyReply
+  ): Promise<FastifyReply> => {
+    const source = await Sources.write(request.body);
 
     return reply.status(200).send(source);
   }
